<resources>
    <string name="app_name">PrattleBattle</string>

    <string name="placeholder_quiz_question">Question</string>
    <string name="placeholder_answer">Answer</string>
    <string name="NextButton">Next</string>
    <string name="CompleteQuizButton">Finish</string>
    <string name="RegisterButton">Register</string>
    <string name="Title">Title</string>
    <string name="todo">TODO</string>
    <string name="Content">Content</string>


    <string name="invalidAge">Invalid age! Age must be between 5 and 100</string>
    <string name="invalidEmail">Invalid email!</string>


    <!--    Shared Preferences Keys-->
    <string name="user_name_key">Enter your name</string>
    <string name="user_age_key">Enter your age</string>
    <string name="user_email_key">Enter your email</string>
    <string name="user_password_key">Enter a password</string>
    <string name="user_location_key">Enter your location</string>

    <string name="completed_registration_key">completedRegistration</string>


    <!--    mainActivity-->
    <string name="prattlebattle">PrattleBattle</string>
    <string name="coddesses">Coddesses</string>
    <string name="subscribe_now"><![CDATA[Subscribe now >]]></string>
    <string name="theory">Theory</string>
    <string name="practice">Practice</string>
    <string name="rehearse_to_converse"><![CDATA[Rehearse to converse >]]></string>
    <string name="start_reading_amp_listening"><![CDATA[Start reading & listening >]]></string>


    <!--   Lesson-->
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="main">Main</string>

<!--    All lessons-->
    <string name="lessonButton"></string>
    <string name="consultations">Consultations</string>
    <string name="events">Events</string>
    <string name="lessons">Lessons</string>
    <string name="lesson_1">Lesson 1</string>
    <string name="lesson_2">Lesson 2</string>
    <string name="lesson_3">Lesson 3</string>
    <string name="lesson_4">Lesson 4</string>
    <string name="lesson_5">Lesson 5</string>
    <string name="lesson_6">Lesson 6</string>
    <string name="lesson_7">Lesson 7</string>
    <string name="lesson_8">Lesson 8</string>
    <string name="lesson_9">Lesson 9</string>
    <string name="lesson_10">Lesson 10</string>
    <string name="lesson_11">Lesson 11</string>
    <string name="lesson_12">Lesson 12</string>
    <string name="lesson_13">Lesson 13</string>
    <string name="lesson_14">Lesson 14</string>
    <string name="lesson_15">Lesson 15</string>
    <string name="lesson_16">Lesson 16</string>


<!--    Quiz scores-->
    <string name="quizFeedbackTitle">Great! Here are the results.</string>
    <string name="totalScoreLessThan8">You need to keep working on your communication skills. You are not expressing yourself clearly, and you might even be misinterpreting messages. The good news is that you can develop your communication skills by paying close attention to how you communicate. Join me in this adventure where we can learn together!</string>
    <string name="totalScoreLessThan15">You\'re a good communicator, but you have communication issues from time to time. Take some time to consider your communication strategy, and pay attention to how well you receive messages as well as how well you deliver them. This will assist you in improving your communication skills. Join me in this adventure where we can learn together!</string>
    <string name="totalScoreMoreThan14">Generally, you are aware of your position as a communicator, both when sending and receiving messages. But there is always room for improvement. Join me in this adventure where we can learn together!</string>
</resources>